aws/pangolin-ec2.yaml
Parameters:
  KeyName:
    Default: ryan_panoptesoft_ed
    Type: String
    Description: Name of an existing EC2 KeyPair to enable SSH access

Resources:
  LabVPC:
    UpdateReplacePolicy: Delete
    Type: AWS::EC2::VPC
    DeletionPolicy: Retain
    Properties:
      CidrBlock: 10.2.0.0/16
      EnableDnsSupport: true
      InstanceTenancy: default
      EnableDnsHostnames: true
      Tags:
        - Value: homelab-vpc
          Key: Name
        - Value: homelab-test
          Key: env

  # Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyVPC-IGW
        - Key: env
          Value: homelab-test

  # Attach Internet Gateway
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref LabVPC
      # Tags:
      #   - Key: env
      #     Value: homelab-test

  SubnetPublic1:
    UpdateReplacePolicy: Delete
    Type: AWS::EC2::Subnet
    DeletionPolicy: Delete
    Properties:
      MapPublicIpOnLaunch: true
      EnableDns64: false
      VpcId: !Ref LabVPC
      AvailabilityZoneId: use2-az1
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: ip-name
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: 10.2.16.0/20
      Tags:
        - Value: lab-subnet-public1-us-east-2a
          Key: Name
        - Value: homelab-test
          Key: env

  SubnetPublic2:
    UpdateReplacePolicy: Delete
    Type: AWS::EC2::Subnet
    DeletionPolicy: Delete
    Properties:
      MapPublicIpOnLaunch: true
      EnableDns64: false
      VpcId: !Ref LabVPC
      AvailabilityZoneId: use2-az2
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: ip-name
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: 10.2.32.0/20
      Tags:
        - Value: lab-subnet-public2-us-east-2b
          Key: Name
        - Value: homelab-test
          Key: env

  SubnetPrivate1:
    UpdateReplacePolicy: Delete
    Type: AWS::EC2::Subnet
    DeletionPolicy: Delete
    Properties:
      MapPublicIpOnLaunch: false
      EnableDns64: false
      VpcId: !Ref LabVPC
      AvailabilityZoneId: use2-az1
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: ip-name
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: 10.2.128.0/20
      Tags:
        - Value: lab-subnet-private1-us-east-2a
          Key: Name
        - Value: homelab-test
          Key: env

  SubnetPrivate2:
    UpdateReplacePolicy: Delete
    Type: AWS::EC2::Subnet
    DeletionPolicy: Delete
    Properties:
      MapPublicIpOnLaunch: false
      EnableDns64: false
      VpcId: !Ref LabVPC
      AvailabilityZoneId: use2-az2
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: ip-name
        EnableResourceNameDnsAAAARecord: false
      CidrBlock: 10.2.144.0/20
      Tags:
        - Value: lab-subnet-private2-us-east-2b
          Key: Name
        - Value: homelab-test
          Key: env

  # Route Tables
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref LabVPC
      Tags:
        - Key: Name
          Value: Lab Public Routes
        - Key: env
          Value: homelab-test

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref LabVPC
      Tags:
        - Key: Name
          Value: Lab Private Routes (AZ1)
        - Key: env
          Value: homelab-test

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref LabVPC
      Tags:
        - Key: Name
          Value: Lab Private Routes (AZ2)
        - Key: env
          Value: homelab-test

  # Routes
  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      #NatGatewayId: !Ref NatGateway1

  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      #NatGatewayId: !Ref NatGateway2

  # Route Table Associations
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref SubnetPublic1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref SubnetPublic2

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref SubnetPrivate1

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref SubnetPrivate2

  SecurityGroup:
    UpdateReplacePolicy: Delete
    Type: AWS::EC2::SecurityGroup
    DeletionPolicy: Delete
    Properties:
      GroupDescription: open to everywhere for pangolin testing
      GroupName: pangolin-open-2
      VpcId: !Ref LabVPC
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          IpProtocol: udp
          FromPort: 51820
          ToPort: 51820
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
        - CidrIp: 0.0.0.0/0
          IpProtocol: udp
          FromPort: 47111
          ToPort: 47111
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: '-1'
        - CidrIpv6: '::/0'
          IpProtocol: '-1'
      Tags:
        - Value: homelab-test
          Key: env

  # EC2NetworkInterface:
  #   UpdateReplacePolicy: Delete
  #   Type: AWS::EC2::NetworkInterface
  #   DeletionPolicy: Delete
  #   Properties:
  #     SourceDestCheck: true
  #     InterfaceType: interface
  #     Description: ''
  #     #PrivateIpAddress: 10.1.9.147
  #     SecondaryPrivateIpAddressCount: 0
  #     Ipv6PrefixCount: 0
  #     Ipv4Prefixes: []
  #     Ipv4PrefixCount: 0
  #     GroupSet:
  #       - !Ref SecurityGroup
  #     Ipv6Prefixes: []
  #     SubnetId: !Ref SubnetPublic1
  #     Tags:
  #       - Value: homelab-test
  #         Key: env

  Instance:
    UpdateReplacePolicy: Delete
    Type: AWS::EC2::Instance
    DeletionPolicy: Delete
    Properties:
      KeyName: !Ref KeyName
      Tenancy: default
      MetadataOptions:
        HttpPutResponseHopLimit: 2
        HttpProtocolIpv6: disabled
        HttpTokens: required
        InstanceMetadataTags: disabled
        HttpEndpoint: enabled
      InstanceInitiatedShutdownBehavior: stop
      BlockDeviceMappings:
        - Ebs:
            VolumeType: gp3
            Iops: 3000
            VolumeSize: 20
            Encrypted: false
            DeleteOnTermination: true
          DeviceName: /dev/sda1
      PrivateDnsNameOptions:
        EnableResourceNameDnsARecord: false
        HostnameType: ip-name
        EnableResourceNameDnsAAAARecord: false
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref SubnetPublic1
      EbsOptimized: true
      DisableApiTermination: false
      SourceDestCheck: true
      PlacementGroupName: ''
      # NetworkInterfaces:
      #   - Ipv6Addresses: []
      #     SecondaryPrivateIpAddressCount: 0
      #     NetworkInterfaceId: !Ref EC2NetworkInterface
      #     DeviceIndex: '0'
      ImageId: ami-0553474a433bb7c41
      InstanceType: t4g.small
      Monitoring: false
      Tags:
        - Value: homelab-pangolin-cfstack
          Key: Name
        - Value: homelab-test
          Key: env
      CreditSpecification:
        CPUCredits: unlimited

# # Attach ENI separately (this allows for better control)
# MyNetworkInterfaceAttachment:
#   Type: AWS::EC2::NetworkInterfaceAttachment
#   Properties:
#     InstanceId: !Ref Instance
#     NetworkInterfaceId: !Ref EC2NetworkInterface
#     DeviceIndex: 0
#     DeleteOnTermination: true
